Bug 402378 - mailto staement , uncomplete url past to kmail composer
Summary: mailto staement , uncomplete url past to kmail composer
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-20 12:20 UTC by Philippe ROUBACH
Modified: 2018-12-20 15:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2018-12-20 12:20:57 UTC
SUMMARY


STEPS TO REPRODUCE
1. go to https://www.infotbm.com/fr/routes/id=-0.624162|44.849958&type=address/datetime=20181226T143038&id=stop_area%3ATBT%3ASA%3AHTLEV&time_type=arrival&type=stop_area/0

2. pass mouse cursor over the mail icon
yousee the mailto statement

mailto:?body=Votre itinéraire avec infotbm.com https://www.infotbm.com/fr/routes/id=-0.624162|44.849958&type=address/datetime=20181226T143038&id=stop_area:TBT:SA:HTLEV&time_type=arrival&type=stop_area/0&subject=Votre itinéraire avec TBM

3. click on the mail icon

a new mail is composed


OBSERVED RESULT
the url in the body is truncated to

https://www.infotbm.com/fr/routes/id=-0.624162|44.849958

EXPECTED RESULT

the url is complete

https://www.infotbm.com/fr/routes/id=-0.624162|44.849958&type=address/datetime=20181226T143038&id=stop_area:TBT:SA:HTLEV&time_type=arrival&type=stop_area/0

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.12.6
KDE Frameworks Version: 5.45.0
Qt Version: 5.94

ADDITIONAL INFORMATION
Comment 1 Laurent Montel 2018-12-20 15:40:45 UTC
Git commit 4f1db227b1b393ea18670ee4664972ba663cff04 by Laurent Montel.
Committed on 20/12/2018 at 15:39.
Pushed by mlaurent into branch 'Applications/18.12'.

Fix Bug 402378 - mailto staement , uncomplete url past to kmail composer

FIXED-IN: 5.10.1

M  +84   -32   messagecore/autotests/stringutiltest.cpp
M  +1    -0    messagecore/autotests/stringutiltest.h
M  +26   -6    messagecore/src/utils/stringutil.cpp
M  +1    -1    messagecore/src/utils/stringutil.h

https://commits.kde.org/messagelib/4f1db227b1b393ea18670ee4664972ba663cff04
Comment 2 Laurent Montel 2018-12-20 15:44:51 UTC
you need kmail 5.10.1 too