Fix Bug 402378 - mailto staement , uncomplete url past to kmail composer

FIXED-IN: 5.10.1
BUG: 402378